--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>My GitHub Page</title>
-</head>
-<body>
-    <h1>Welcome to my GitHub Page!</h1>
-</body>
+<html lang="en">
+  <head>
+    <meta name="description" content="Information about Youth Of Vision Academy in Jamaica.">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Youth Of Vision Academy</title>
+  </head>
+  <body>
+    <h1>Youth Of Vision Academy</h1>
+    <p>
+      If you have landed on this site, it might mean you are researching
+      <a href="https://yovainc.org/"
+        >Youth Of Vision Academy in Jamaica (YOVA)</a
+      >
+      for your child. We are former YOVA parents who have relevant and critical
+      information for your research. Please drop us an email at
+      <a href="mailto:parents@youthofvisionacademy.com">parents@youthofvisionacademy.com</a> with your
+      phone number and the reason you are inquiring so we can have a
+      conversation. We will call you back.
+    </p>
+    <p>
+      We also urge you to reach out to the local American Embassy via
+      <a href="mailto:KingstonACS@state.gov">KingstonACS@state.gov</a> as you do
+      your due diligence.
+    </p>
+    <img src="images/yova-campus.avif" alt="YOVA Campus" />
+    <p>
+      If you are, as we were, frustrated with the failing US systems and
+      desperate for where to send your child who is struggling to live in a home
+      setting due to Reactive Attachment Disorder (RAD) or other severe mental
+      illnesses. Perhaps you are looking outside of the United States due to
+      costs or lack of options. YOVA is a "therapeutic boarding school" in
+      Jamaica for troubled children and teens. They claim to be a RAD specific
+      residential program, but not a treatment center (therefore, not a RTC or
+      PRTF). YOVA is positioned as a low-cost boarding school and provider of an
+      international Christian boarding school experience abroad. There is little
+      available online, therefore we are providing our experience so you can
+      make an informed decision as a parent.
+    </p>
+    <img src="images/yova-campus-2.avif" alt="More of the YOVA Campus" />
+    <img src="images/yova-sign.avif" alt="YOVA Sign" />
+  </body>
 </html>
