Update index.html to have favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     content="Information about Youth Of Vision Academy in Jamaica.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="icon" type="image/png" href="images/yova-favicon.png" />
   <title>Youth Of Vision Academy</title>
 </head>
 
